# playdate-organiser

./: .env.example  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml  instructions.md
backend/: .env  Dockerfile  Dockerfile.prod  Dockerfile.railway  create_migration.sh  pyproject.toml  start-prod.sh  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0245dbd9a5dd_initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  children.py  interests.py  playdates.py  user_lists.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  base.py  child.py  interest.py  playdate.py  user.py  user_list.py
backend/app/models/: __init__.py  child.py  interest.py  playdate.py  user.py  user_list.py
backend/app/schemas/: __init__.py  child.py  interest.py  playdate.py  user.py  user_list.py
deploy/: cloud-platforms.md  production-ready.md  railway-setup.md  vps-deploy.md
frontend/: Dockerfile  Dockerfile.prod  package-lock.json  package.json  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/children/: page.tsx
frontend/app/dashboard/create-playdate/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: ProtectedRoute.tsx
frontend/contexts/: AuthContext.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
